# reit-risk-summarizer

./: .coverage  .env.example  .gitignore  Makefile  README.md  env-example.sh  handoff.md  pre-commit-config.yaml  pyproject.toml  reit-risk-golden-dataset.csv  sample_AMT_risk_factors.txt  truncated_portion.txt
docs/: extraction_validation.md
evaluation/: __init__.py  evaluator.py  golden_output_manager.py  metrics.py  run_evaluation.py
notebooks/: test_api.ipynb  test_evaluation.ipynb  test_extractor.ipynb  test_fetcher.ipynb  test_metrics.ipynb  test_orchestrator.ipynb  test_summarizer.ipynb
src/reit_risk_summarizer/: config.py  dependencies.py  exceptions.py  main.py  middlewares.py
src/reit_risk_summarizer/routers/: health.py  risks.py
src/reit_risk_summarizer/schemas/: requests.py  responses.py
src/reit_risk_summarizer/services/: cache.py  orchestrator.py
src/reit_risk_summarizer/services/llm/: __init__.py  summarizer.py
src/reit_risk_summarizer/services/llm/prompts/: __init__.py  v1_0.py
src/reit_risk_summarizer/services/sec/: __init__.py  extractor.py  fetcher.py
src/reit_risk_summarizer/services/sec/.ipynb_checkpoints/: fetcher-checkpoint.py
tests/: conftest.py
tests/integration/: __init__.py  test_api_endpoints.py  test_full_flow.py
tests/unit/: test_golden_output_manager.py  test_metrics.py  test_middleware.py  test_orchestrator.py  test_risk_extractor.py  test_sec_fetcher.py  test_summarizer.py
