[project]
name = "reit-risk-summarizer"
version = "0.1.0"
description = "LLM-powered REIT risk analysis from SEC 10-K filings"
authors = [
    {name = "Mitchell O'Brien", email = "obrien.mitc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # HTTP clients
    "httpx>=0.26.0",
    "requests>=2.31.0",
    
    # HTML/XML parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    
    # LLM providers
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    
    # Evaluation & ML
    "sentence-transformers>=2.3.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    
    # Configuration & utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # Caching (optional, for production)
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    
    # Code quality
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    
    # Pre-commit
    "pre-commit>=3.6.0",
    
    # Notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
reit-api = "reit_risk_summarizer.main:main"
evaluate = "evaluation.run_evaluation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reit_risk_summarizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/reit_risk_summarizer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may call external APIs)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
